--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   fl_chart: ^0.66.1
+  heart_bpm: ^2.0.0+0
 
 dev_dependencies:
   flutter_test:
