--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   fl_chart: ^0.66.1
   heart_bpm: ^2.0.0+0
+  animate_do: ^3.3.3
+  http: ^1.2.0
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
