--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   http: ^1.2.0
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  audioplayers: ^5.2.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,10 @@ flutter:
  # To add assets to your application, add an assets section, like this:
   assets:
       - assets/icons/
+      - assets/tones/high-bpm-music.mp3
+      - assets/tones/mid-bpm-music.mp3
+      - assets/tones/low-bpm-music.mp3
+      
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
